--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "request": "^2.88.2",
     "require": "^2.4.20",
     "swagger-ui-express": "^5.0.1",
+    "yahoo-finance2": "^2.13.3",
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
