--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "mssql": "^11.0.1",
+    "node-fetch": "^3.3.2",
     "request": "^2.88.2",
     "require": "^2.4.20",
     "swagger-ui-express": "^5.0.1",
