--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@azure/logger": "^1.1.4",
     "axios": "^1.9.0",
+    "chai": "^5.2.0",
     "dotenv": "^16.5.0",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
+    "mocha": "^11.2.2",
     "mssql": "^11.0.1",
     "node-fetch": "^3.3.2",
     "request": "^2.88.2",
