--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "keywords": [],
   "author": "",
@@ -12,12 +12,11 @@
   "dependencies": {
     "@azure/logger": "^1.1.4",
     "axios": "^1.9.0",
-    "chai": "^5.2.0",
+    "chai": "^4.3.7",
     "dotenv": "^16.5.0",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
-    "mocha": "^11.2.2",
     "mssql": "^11.0.1",
     "node-fetch": "^3.3.2",
     "request": "^2.88.2",
@@ -27,6 +26,7 @@
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
+    "mocha": "^11.2.2",
     "nodemon": "^3.1.9"
   }
 }
